# Riotee_Gateway

./: .bumpversion.cfg  .clang-format  .gitignore  52-riotee.rules  LICENSE.txt  README.md  riotee-gateway.service
.github/workflows/: build-firmware.yml  build-host.yml  build.yml  release-firmware.yml  release-host.yml
application/: CMakeLists.txt  prj.conf  west.yml
application/src/: base64.c  main.c  message_buffer.c  message_buffer.h  radio.c  radio.h
firmware/: CMakeLists.txt  README.md  app.overlay  prj.conf  west.yml
firmware/src/: base64.c  base64.h  main.c  message_buffer.c  message_buffer.h  radio.c  radio.h
host/riotee_gateway/: __init__.py  packet_model.py  server.py
software/: cli.py  client.py  packet_model.py  pyproject.toml  server.py  transceiver.py
software/riotee/: __init__.py  cli.py  client.py  server.py  transceiver.py
